nodejs/ocp/04/templates/exported.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    generation: 14
    labels:
      app: ace
    name: ace
    namespace: exceptions
    resourceVersion: "455225082"
    selfLink: /apis/apps.openshift.io/v1/namespaces/exceptions/deploymentconfigs/ace
    uid: 3e1a3d0c-a372-11ea-9655-0a580a8100f0
  spec:
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      app: ace
      deploymentconfig: ace
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: ace
          deploymentconfig: ace
      spec:
        containers:
        - env:
          - name: REDIS
            valueFrom:
              secretKeyRef:
                key: redis.host
                name: redis-configuration
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: redis.password
                name: redis-configuration
          - name: PATH_CONFIG
            valueFrom:
              configMapKeyRef:
                key: path.config
                name: app-configmap
          - name: LOG_LEVEL
            valueFrom:
              configMapKeyRef:
                key: log.level
                name: app-configmap
          - name: LOG_PATH
            valueFrom:
              configMapKeyRef:
                key: log.path
                name: app-configmap
          - name: APP_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.labels['app']
          - name: POD_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          image: image-registry.openshift-image-registry.svc:5000/exceptions/ace@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
          imagePullPolicy: Always
          name: ace
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/app-root/src/config/java.json
            name: c-exceptions
            subPath: java.json
          - mountPath: /tmp/exceptions/
            name: logs
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: logs
        - configMap:
            defaultMode: 420
            items:
            - key: c.json
              path: java.json
            name: app-configmap
          name: c-exceptions
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ace
        from:
          kind: ImageStreamTag
          name: ace:latest
          namespace: exceptions
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/exceptions/ace@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
      type: ImageChange
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2020-05-31T21:09:37Z"
      lastUpdateTime: "2020-05-31T21:09:39Z"
      message: replication controller "ace-12" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2020-05-31T21:10:41Z"
      lastUpdateTime: "2020-05-31T21:10:41Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 12
    observedGeneration: 14
    readyReplicas: 2
    replicas: 2
    unavailableReplicas: 0
    updatedReplicas: 2
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    labels:
      app: ace
    name: ace
    namespace: exceptions
    resourceVersion: "455111146"
    selfLink: /api/v1/namespaces/exceptions/services/ace
    uid: 3e495e78-a372-11ea-bbb3-0698e01dcbf2
  spec:
    clusterIP: 172.30.241.90
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: ace
      deploymentconfig: ace
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2020-05-31T19:14:09Z"
    labels:
      app: ace
    name: ace
    namespace: exceptions
    resourceVersion: "455115634"
    selfLink: /apis/route.openshift.io/v1/namespaces/exceptions/routes/ace
    uid: e74be6f0-a372-11ea-a6ee-0a580a820124
  spec:
    host: ace-exceptions.apps.shared.na.openshift.opentlc.com
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: ace
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-05-31T19:14:09Z"
        status: "True"
        type: Admitted
      host: ace-exceptions.apps.shared.na.openshift.opentlc.com
      routerCanonicalHostname: apps.shared.na.openshift.opentlc.com
      routerName: default
      wildcardPolicy: None
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:24Z"
    labels:
      app: ace
    name: ace
    namespace: exceptions
    resourceVersion: "455111114"
    selfLink: /apis/build.openshift.io/v1/namespaces/exceptions/buildconfigs/ace
    uid: 3deb65a4-a372-11ea-9655-0a580a8100f0
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: ace:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      contextDir: nodejs
      git:
        uri: https://github.com/carlossagala/ace
      sourceSecret:
        name: git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: nodejs:10
          namespace: openshift
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    - github:
        secret: u26E0eHd4PTUjVA4bS-7
      type: GitHub
    - generic:
        secret: TPKuUdODtHKaLwF85x-N
      type: Generic
    - type: ConfigChange
    - imageChange:
        lastTriggeredImageID: image-registry.openshift-image-registry.svc:5000/openshift/nodejs@sha256:bce9d648821108fb7046b33b6f3f1b49607fd44a242de2a6a0a538f56e353153
      type: ImageChange
  status:
    lastVersion: 1
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:24Z"
    generation: 1
    labels:
      app: ace
    name: ace
    namespace: exceptions
    resourceVersion: "455113363"
    selfLink: /apis/image.openshift.io/v1/namespaces/exceptions/imagestreams/ace
    uid: 3dc6c96a-a372-11ea-a6ee-0a580a820124
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: image-registry.openshift-image-registry.svc:5000/exceptions/ace
    publicDockerImageRepository: default-route-openshift-image-registry.apps.shared.na.openshift.opentlc.com/exceptions/ace
    tags:
    - items:
      - created: "2020-05-31T19:11:45Z"
        dockerImageReference: image-registry.openshift-image-registry.svc:5000/exceptions/ace@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
        generation: 1
        image: sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
      tag: latest
- apiVersion: v1
  data:
    c.json: |-
      [
          { "id": 1 ,"name": "OverflowException", "count": 0 },
          { "id": 2 ,"name": "SegmentationFaultException", "count": 0 },
          { "id": 3 ,"name": "UnderFlowException", "count": 0 }
      ]
    log.level: debug
    log.path: /tmp/exceptions/exceptions.log
    path.config: ./config/java.json
    port: "8080"
  kind: ConfigMap
  metadata:
    creationTimestamp: "2020-05-31T19:58:33Z"
    labels:
      app: ace
    name: app-configmap
    namespace: exceptions
    resourceVersion: "455236940"
    selfLink: /api/v1/namespaces/exceptions/configmaps/app-configmap
    uid: 1baa9372-a379-11ea-a193-0a16ab677b4c
- apiVersion: v1
  data:
    redis.host: cmVkaXM6NjM3OQ==
    redis.password: cjNkaDR0MDEh
  kind: Secret
  metadata:
    creationTimestamp: "2020-05-31T20:04:23Z"
    labels:
      app: ace
    name: redis-configuration
    namespace: exceptions
    resourceVersion: "455236623"
    selfLink: /api/v1/namespaces/exceptions/secrets/redis-configuration
    uid: ebc8ffed-a379-11ea-bbb3-0698e01dcbf2
  type: Opaque
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
